--- a/service.html
+++ b/service.html
@@ -182,7 +182,7 @@
             <div class="container-fluid px-0">
                 <div class="row no-gutters align-items-center">
                     <div class="col-lg-6 order-lg-1 order-2">
-                        <div class="about-content-wrapper p-lg-5 p-4">
+                        <div class="about-content-wrapper p-lg-5 p-4 left-centsec">
                             <div class="about-content text-center">
                                 <h3 class="about-title mb-4">Boat Storage</h3>
                                 <p class="about-text mb-lg-4">Looking for a safe, secure place to store your boat this
