--- a/contact.html
+++ b/contact.html
@@ -272,13 +272,94 @@
     <div class="sidebar-overlay"></div>
 
     <main>
-        <section class="py-100">
-            <div class="container">
-                <div class="text-center">
-                    <h1 class="text-teal">CONTACT US</h1>
+        <!-- Contact V2 Section Start -->
+        <section class="contact-v2-section">
+            <div class="contact-v2-bg">
+                <img src="./assets/images/contact/banner-img.png" alt="Contact Starboard Choice Marine">
+                <div class="contact-v2-overlay"></div>
+            </div>
+            <div class="container contact-v2-container">
+                <div class="row justify-content-center">
+                    <div class="col-12">
+                        <h1 class="contact-v2-title">CONTACT STARBOARD <br> CHOICE MARINE</h1>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="contact-v2-card">
+                            <h2 class="section-title-alt mb-lg-5 mb-3">GET IN TOUCH</h2>
+                            <form action="#" class="request-service-form">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <input type="text" class="request-form-input" placeholder="First Name">
+                                    </div>
+                                    <div class="col-md-12">
+                                        <input type="text" class="request-form-input" placeholder="Last Name">
+                                    </div>
+                                    <div class="col-md-12">
+                                        <input type="email" class="request-form-input" placeholder="Email">
+                                    </div>
+                                    <div class="col-md-12">
+                                        <input type="tel" class="request-form-input" placeholder="Phone">
+                                    </div>
+                                    <div class="col-md-12">
+                                        <input type="text" class="request-form-input" placeholder="Zip Code">
+                                    </div>
+                                    <div class="col-md-12">
+                                        <textarea class="request-form-input" rows="4" placeholder="Comments"></textarea>
+                                    </div>
+                                    <div class="col-12 text-center">
+                                        <button type="submit" class="btn-global">Submit</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
+        <!-- Contact V2 Section End -->
+
+        <!-- Contact Info Section Start -->
+        <section class="about-section my-lg-5 my-3 ">
+            <div class="container-fluid px-0">
+                <div class="row no-gutters align-items-center">
+                    <div class="col-lg-6">
+                        <div class="about-content-wrapper p-lg-5 p-4">
+                            <div class="about-content">
+                                <div class="contact-info-v2">
+                                    <div class="info-item-v2">
+                                        <div class="info-icon-v2"><i class="fa-solid fa-location-dot"></i></div>
+                                        <div class="info-text-v2">68502 Dailey Rd, Edwardsburg, MI 49112</div>
+                                    </div>
+                                    <div class="info-item-v2">
+                                        <div class="info-icon-v2"><i class="fa-solid fa-phone"></i></div>
+                                        <div class="info-text-v2">
+                                            <a href="tel:2694144351" class="info-phone-v2">(269) 414-4351</a>
+                                        </div>
+                                    </div>
+                                    <div class="info-item-v2">
+                                        <div class="info-icon-v2"><i class="fa-regular fa-clock"></i></div>
+                                        <div class="info-text-v2">
+                                            Tuesday - Friday: 9:00 AM - 4:00 PM<br>
+                                            Saturday, Sunday & Monday: Closed
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 ">
+                        <div class="about-img-wrapper">
+                            <iframe class="google-map-iframe"
+                                src="https://maps.google.com/maps?q=68502%20Dailey%20Rd,%20Edwardsburg,%20MI%2049112&t=&z=15&ie=UTF8&iwloc=&output=embed"
+                                allowfullscreen="" loading="lazy"></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Contact Info Section End -->
+
+
     </main>
 
     <!-- Footer Section Start -->
