--- a/docks.html
+++ b/docks.html
@@ -48,7 +48,7 @@
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1 class="hero-title">Docks, Lifts, Hoists, <br>& Barge Services</h1>
-                <a href="#" class="btn-global">Request Storage</a>
+                <a href="#" id="docks-request-btn" class="btn-global">Request Storage</a>
             </div>
         </section>
         <!-- Hero Banner Section End -->
@@ -63,7 +63,7 @@
                                 <h3 class="about-title mb-4">Our Docks & Lifts</h3>
                                 <p class="about-text mb-lg-4 mb-3">Are you looking for high-quality boat docks and lifts? Look no further than Starboard Choice Marine, your local boat dealer in Edwardsburg, MI. Our dealership offers everything you need to enjoy the marine lifestyle, including a wide selection of boat docks and lifts for sale. Read on to learn more about our selection, and please feel free to contact us with any questions. We proudly serve Edwardsburg, MI, and our neighbors from Niles and Dowagiac.
                                 </p>
-                                <a href="#" class="btn-outline-global d-inline-flex">Dock Solutions Inquiry</a>
+                                <a href="#" id="docks-request-btn-2" class="btn-outline-global d-inline-flex">Dock Solutions Inquiry</a>
                             </div>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                                 <h3 class="about-title mb-4">Hoist & Barge Services</h3>
                                 <p class="about-text mb-lg-4 mb-3">Looking for reliable hoist and barge services in Southern Michigan? Starboard Choice Marine, located in Edwardsburg, MI, proudly serves boaters from Niles, Dowagiac, and beyond. We provide timely boat hoist installation after spring ice-out and removal at the end of the season, prioritizing customers who store with us or purchase a new Great Lakes Lift to ensure fast, dependable service.</p>
                                 <p class="about-text mb-lg-4 mb-3">Our state-of-the-art work barge allows us to safely and efficiently recover submerged equipment caused by severe weather, collisions, or unexpected situations—without causing damage. When you need professional hoist or barge services, you can count on Starboard Choice Marine.</p>
-                                <a href="#" class="btn-outline-global d-inline-flex">Dock Solutions Inquiry</a>
+                                <a href="#" id="docks-request-btn-3" class="btn-outline-global d-inline-flex">Dock Solutions Inquiry</a>
                             </div>
                         </div>
                     </div>
