--- a/index.html
+++ b/index.html
@@ -292,12 +292,12 @@
         <section class="hero-actions-wrapper">
             <div class="hero-actions">
                 <div class="action-buttons">
-                    <a href="#" class="btn-global">New Inventory</a>
-                    <a href="#" class="btn-global">Pre Owned Inventory</a>
+                    <a href="#" id="new-inventory-btn" class="btn-global">New Inventory</a>
+                    <a href="#" id="pre-owned-inventory-btn" class="btn-global">Pre Owned Inventory</a>
                 </div>
                 <div class="hero-search">
                     <input type="text" placeholder="Search Inventory">
-                    <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    <button type="submit" id="search-inventory-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
             </div>
 
@@ -474,7 +474,7 @@
                                     Don't let adventure pass you by. Visit our showroom or browse our extensive online
                                     inventory today.
                                 </p>
-                                <a href="#" class="btn-outline-global d-inline-flex">More About Us</a>
+                                <a href="#" id="more-about-us-btn" class="btn-outline-global d-inline-flex">More About Us</a>
                             </div>
                         </div>
                     </div>
@@ -610,7 +610,7 @@
                                         customers.
                                     </p>
                                     <a href="https://www.facebook.com/starboardchoice.marine/?utm_source=chatgpt.com#"
-                                        target="_blank" class="btn-outline-global">Join our community and never miss a
+                                        target="_blank" id="facebook-community-btn" class="btn-outline-global">Join our community and never miss a
                                         post!</a>
                                 </div>
                             </div>
