--- a/parts.html
+++ b/parts.html
@@ -46,7 +46,7 @@
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1 class="hero-title">Parts Department</h1>
-                <a href="#" class="btn-global">Request Parts</a>
+                <a href="#" id="parts-request-btn" class="btn-global">Request Parts</a>
             </div>
         </section>
         <!-- Hero Banner Section End -->
@@ -59,7 +59,7 @@
                         <h2 class="section-title-alt mb-lg-4 mb-3">Marine Parts You Can Count On</h2>
                         <div class="service-intro-content">
                             <p class="mb-4">When it comes to keeping your boat running at its best, quality parts matter. At Starboard Choice Marine, our knowledgeable parts team is here to help you find the right components, accessories, and upgrades for your boat—without the guesswork.</p>
-                            <a href="#" class="btn-outline-teal">Request Parts</a>
+                            <a href="#" id="parts-request-btn-2" class="btn-outline-teal">Request Parts</a>
                         </div>
                     </div>
                 </div>
