--- a/service.html
+++ b/service.html
@@ -47,7 +47,7 @@
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1 class="hero-title">Boat & Outboard <br>Service & Repairs</h1>
-                <a href="#" class="btn-global">Request Storage</a>
+                <a href="#" id="service-request-btn" class="btn-global">Request Service</a>
             </div>
         </section>
         <!-- Hero Banner Section End -->
@@ -82,7 +82,7 @@
                                 Choice Marine, in addition to any boats we have previously serviced or stored since
                                 January 1, 2021.</p>
                             <p class="font-weight-bold mb-5">Have questions? Give us a call at (269) 414-4351.</p>
-                            <a href="#" class="btn-outline-teal">Request Service</a>
+                            <a href="#" id="service-request-btn-2" class="btn-outline-teal">Request Service</a>
                         </div>
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                                     boat with us, and you can count on it being ready for action when boating season
                                     rolls back around!
                                 </p>
-                                <a href="#" class="btn-outline-global d-inline-flex">Storage Details & Requests</a>
+                                <a href="#" id="storage-details-btn" class="btn-outline-global d-inline-flex">Storage Details & Requests</a>
                             </div>
                         </div>
                     </div>
