--- a/trade.html
+++ b/trade.html
@@ -47,7 +47,7 @@
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1 class="hero-title">Sell/Trade Your Boat</h1>
-                <a href="#" class="btn-global">Start Selling Your Boat</a>
+                <a href="#" id="trade-boat-btn" class="btn-global">Start Selling Your Boat</a>
             </div>
         </section>
         <!-- Hero Banner Section End -->
@@ -68,7 +68,7 @@
                             </div>
                         </div>
                         <div class="text-center mt-3">
-                            <a href="#" class="btn-outline-teal">Start Selling Your Boat</a>
+                            <a href="#" id="trade-boat-btn-2" class="btn-outline-teal">Start Selling Your Boat</a>
                         </div>
                     </div>
                 </div>
