--- a/specials-details.html
+++ b/specials-details.html
@@ -272,10 +272,36 @@
     <div class="sidebar-overlay"></div>
 
     <main>
-        <section class="py-100">
+        <section class="py-lg-5 py-3 mb-lg-5 mb-3">
             <div class="container">
-                <div class="text-center">
-                    <h1 class="text-teal">SPECIALS DETAILS</h1>
+                <div class="row justify-content-center">
+                    <div class="col-lg-10">
+                        <div class="specials-details-img mb-lg-5 mb-4 text-center">
+                            <img src="./assets/images/specials/specialsimg1.jpg"
+                                alt="Mercury Win a New Outboard Giveaway!" class="img-fluid w-100">
+                        </div>
+
+                        <h1 class="specials-detail-title mb-3">MERCURY WIN A NEW OUTBOARD GIVEAWAY!</h1>
+                        <p class="specials-detail-date mb-4">Ends December 31, 2025</p>
+
+                        <div class="specials-detail-desc mb-5">
+                            <p>Here’s your chance to revive the excitement and reinvent your on-water adventures! For a
+                                limited time, you can win a new Mercury outboard. Enter by December 31, 2025, for your
+                                chance to win a new Mercury outboard up to 300hp, valued at up to $32,925. Giveaway runs
+                                from October 1, 2025, to December 31, 2025. The winner will be selected in January,
+                                2026. Excludes Verado® and Avator™ outboards. No purchase necessary. Limit one entry per
+                                person. U.S. residents only.</p>
+                        </div>
+
+                        <div class="">
+                            <a href="#" class="btn-outline-global">Enter for a chance to win!</a>
+                        </div>
+
+                        <div class="terms-conditions pt-5">
+                            <h2 class="terms-title mb-4">TERMS AND CONDITIONS</h2>
+                            <p class="terms-text">NO PURCHASE NECESSARY TO ENTER OR CLAIM A PRIZE. VOID WHERE PROHIBITED BY LAW. CERTAIN RESTRICITONS APPLY. PLEASE SEE OFFICAL RULES FOR ELIGIBILITY AND DETAILS. To be eligible to enter and win, you must be: (a) a legal U.S. resident (excluding Puerto Rico, U.S. territories and possessions); (b) 18 years or older as of the Entry Period and (c) reside in the United States as of the Entry Period. To be eligible to win the Grand Prize, the winning entrant must also own a boat that is suitable for the safe installation and operation of the selected engine (between 2.5hp and 300hp) as further explained in the official rules.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
