--- a/about.html
+++ b/about.html
@@ -272,13 +272,240 @@
     <div class="sidebar-overlay"></div>
 
     <main>
-        <section class="py-100">
-            <div class="container">
-                <div class="text-center">
-                    <h1 class="text-teal">ABOUT US</h1>
+
+        <!-- About Section Start -->
+        <section class="about-section my-lg-5 my-3 ">
+            <div class="container-fluid px-0">
+                <div class="row no-gutters align-items-center">
+                    <div class="col-lg-6 order-lg-1 order-2">
+                        <div class="about-content-wrapper p-lg-5 p-4">
+                            <div class="about-content left-centsec">
+                                <h1 class="about-title mb-4">About Starboard Choice Marine</h1>
+                                <p class="about-text mb-lg-4 mb-3">Welcome to Starboard Choice Marine, proudly serving
+                                    boaters in Edwardsburg, MI, and the surrounding region. We offer a strong selection
+                                    of boats and marine equipment backed by honest, friendly service you can trust. From
+                                    sales to expert maintenance and repairs, our team is here to support your boating
+                                    lifestyle.
+                                </p>
+                                <a href="/contact" id="about-contact-btn"
+                                    class="btn-outline-global d-inline-flex">Contact Us</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 order-lg-2 order-1">
+                        <div class="about-img-wrapper">
+                            <img src="./assets/images/about/banner-img.png" alt="Boat Storage" class="img-fluid w-100">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
+        <!-- About Section End -->
+
+        <!-- Our story section Start -->
+        <section class="py-lg-5 py-3 story-section">
+            <div class="container-fluid">
+                <div class="text-center mb-lg-5 mb-4">
+                    <h2 class="section-title-alt">Our Story</h2>
+                </div>
+
+                <div class="story-carousel owl-carousel owl-theme">
+                    <!-- Item 1 -->
+                    <div class="item">
+                        <div class="story-card">
+                            <div class="story-year">2004</div>
+                            <div class="story-divider"></div>
+                            <div class="story-content">
+                                <h4>A SERVICE-FIRST BEGINNING</h4>
+                                <p>Starboard Choice Marine is founded in downtown Mishawaka, IN by Steve and Andy Peterson. Seeing a lack of quality marine service in the Michiana area, they set out to build a friendly, local business focused entirely on service.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Item 2 -->
+                    <div class="item">
+                        <div class="story-card">
+                            <div class="story-year range">2004 – 2011</div>
+                            <div class="story-divider"></div>
+                            <div class="story-content">
+                                <h4>Building Trust Through Service</h4>
+                                <p>Operating as a service-only facility, Starboard Choice Marine earns a loyal customer base by embracing an “old-school” service mentality—prioritizing personal care, honesty, and attention to detail.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Item 3 -->
+                    <div class="item">
+                        <div class="story-card">
+                            <div class="story-year range">2012</div>
+                            <div class="story-divider"></div>
+                            <div class="story-content">
+                                <h4>Entering Boat Sales</h4>
+                                <p>Responding to customer demand, Starboard Choice Marine expands into boat sales, adding Tahoe® Luxury Pontoon Boats and MirroCraft fishing boats to the lineup.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Item 4 -->
+                    <div class="item">
+                        <div class="story-card">
+                            <div class="story-year range">2013 - 2015</div>
+                            <div class="story-divider"></div>
+                            <div class="story-content">
+                                <h4>Industry-Leading Sales Success</h4>
+                                <p>Starboard Choice Marine becomes the #1 volume Tahoe pontoon dealer in Indiana for three consecutive years (2013-2015).</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Item 5 -->
+                    <div class="item">
+                        <div class="story-card">
+                            <div class="story-year range">October 2015</div>
+                            <div class="story-divider"></div>
+                            <div class="story-content">
+                                <h4>A New Home in Edwardsburg</h4>
+                                <p>After outgrowing the Mishawaka location, the business purchases Pleasant Lake Resort in Edwardsburg, MI. Renovations begin on a modern showroom, a state-of-the-art service facility, and an on-site launch for water testing.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Item 6 -->
+                    <div class="item">
+                        <div class="story-card">
+                            <div class="story-year range">2016</div>
+                            <div class="story-divider"></div>
+                            <div class="story-content">
+                                <h4>Gold Status & Lift Sales</h4>
+                                <p>Starboard Choice Marine earns its first national “Gold” dealership status from Tahoe Pontoons. That same year, Great Lakes Lifts are added to the product lineup.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Item 7 -->
+                    <div class="item">
+                        <div class="story-card">
+                            <div class="story-year range">2017</div>
+                            <div class="story-divider"></div>
+                            <div class="story-content">
+                                <h4>Facility Expansion & New Brands</h4>
+                                <p>The facility expands again with an additional on-site storage building. PolarKraft aluminum fishing boats are added to the sales lineup as business continues to grow.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Item 8 -->
+                    <div class="item">
+                        <div class="story-card">
+                            <div class="story-year range">2018 - 2023</div>
+                            <div class="story-divider"></div>
+                            <div class="story-content">
+                                <h4>Million Dollar Dealer Recognition</h4>
+                                <p>Tahoe awards Starboard Choice Marine the “Million Dollar Dealer” honor—an achievement maintained every year from 2018 through 2023.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Item 9 -->
+                    <div class="item">
+                        <div class="story-card">
+                            <div class="story-year range">2019</div>
+                            <div class="story-divider"></div>
+                            <div class="story-content">
+                                <h4>Increased Efficiency & Service Expansion</h4>
+                                <p>A new boat rigging facility is completed, improving efficiency for new boat preparation and delivery. AlumaCraft fishing boats are added, and boat hoist installation and removal services launch with the addition of a work barge.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Item 10 -->
+                    <div class="item">
+                        <div class="story-card">
+                            <div class="story-year range">2020</div>
+                            <div class="story-divider"></div>
+                            <div class="story-content">
+                                <h4>Commercial & Government Work Boats</h4>
+                                <p>Starboard Choice Marine begins selling Bayview commercial work boats, supplying government and commercial agencies across the U.S., including as far south as Florida.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Item 11 -->
+                    <div class="item">
+                        <div class="story-card ourstory-lastcard">
+                            <div class="story-content">
+                                <h4>Growing Forward, <br class="d-none d-lg-block"> Staying Grounded</h4>
+                                <p>Starboard Choice Marine begins selling Bayview commercial work boats, supplying government and commercial agencies across the U.S., including as far south as Florida.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Our story section End -->
+
+
+        <!-- Our Inventory Section Start -->
+        <section class="about-section my-lg-5 my-3">
+            <div class="container-fluid px-0">
+                <div class="row no-gutters align-items-center">
+                    <div class="col-lg-6 ">
+                        <div class="about-img-wrapper">
+                            <img src="./assets/images/about/inventory.png" alt="Boat Storage" class="img-fluid w-100">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="about-content-wrapper p-lg-5 p-4">
+                            <div class="about-content left-centsec">
+                                <h3 class="about-title mb-4">Our Inventory</h3>
+                                <p class="about-text mb-lg-4 mb-3">In addition to being one of the top 25 Tahoe pontoon
+                                    dealers in the nation, Starboard Choice Marine is one of the only Evinrude® outboard
+                                    Platinum dealers in the Edwardsburg area. We also carry marine equipment from
+                                    Mercury Marine, Suzuki Marine, Honda Marine, and Tohatsu.</p>
+                                <p class="about-text mb-lg-4 mb-3">We maintain a wide selection of boats, pontoons,
+                                    outboard motors, boat trailers, boat lifts, and more! If you are looking to sell
+                                    your used boat, we also offer consignment sales.</p>
+                                <a href="/inventory" id="about-contact-btn-2"
+                                    class="btn-outline-global d-inline-flex">Contact Us</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Our Inventory Section End -->
+
+        <!-- Our Service Center Section Start -->
+        <section class="about-section my-lg-5 my-3 ">
+            <div class="container-fluid px-0">
+                <div class="row no-gutters align-items-center">
+                    <div class="col-lg-6 order-lg-1 order-2">
+                        <div class="about-content-wrapper p-lg-5 p-4">
+                            <div class="about-content left-centsec">
+                                <h3 class="about-title mb-4">Our Service Center</h3>
+                                <p class="about-text mb-lg-4 mb-3">Starboard Choice Marine is your one-stop destination
+                                    for marine parts and services! We promise quick turnaround and professional results.
+                                    We offer battery replacement, detailing, engine installation, electrical repairs,
+                                    boat storage, and more! Whenever you need a helping hand with boat maintenance, our
+                                    team is ready and able to assist.</p>
+                                <p class="about-text mb-lg-4 mb-3">Thanks again for choosing Starboard Choice Marine!
+                                    You can find us on the shores of Pleasant Lake in Edwardsburg, MI. We welcome our
+                                    neighbors from Niles, Dowagiac, and beyond.</p>
+                                <a href="/contact" id="about-contact-btn-3"
+                                    class="btn-outline-global d-inline-flex">Contact Us</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 order-lg-2 order-1">
+                        <div class="about-img-wrapper">
+                            <img src="./assets/images/about/service-center.png" alt="Boat Storage"
+                                class="img-fluid w-100">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Our Service Center Section End -->
+
     </main>
 
     <!-- Footer Section Start -->
