mission statement page

--- a/mission-statement.html
+++ b/mission-statement.html
@@ -271,14 +271,102 @@
     </div>
     <div class="sidebar-overlay"></div>
 
+
     <main>
-        <section class="py-100">
-            <div class="container">
-                <div class="text-center">
-                    <h1 class="text-teal">MISSION STATEMENT</h1>
+
+        <!-- Our Mission Statement Section Start -->
+        <section class="about-section our-mission-statement my-lg-5 my-3 ">
+            <div class="container-fluid px-0">
+                <div class="row no-gutters align-items-center">
+                    <div class="col-lg-6 order-lg-1 order-2">
+                        <div class="about-content-wrapper p-lg-5 p-4">
+                            <div class="about-content left-centsec ">
+                                <h1 class="about-title mb-4 text-left">Our Mission Statement</h1>
+                                <ol class="">
+                                    <li>Provide superior products & service so our customers have the most satisfying
+                                        boat ownership experience of their lifetime</li>
+                                    <li>Serve others as we would like to be treated</li>
+                                    <li>Create an environment in the dealership that fosters passion for our mission and
+                                        vision</li>
+                                </ol>
+                                <a href="/inventory" id="shop-boats-btn"
+                                    class="btn-outline-global d-inline-flex mr-3">Shop Boats</a>
+                                <a href="/waterfront-solutions" id="waterfront-solutions-btn"
+                                    class="btn-outline-global d-inline-flex">Waterfront Solutions</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 order-lg-2 order-1">
+                        <div class="about-img-wrapper">
+                            <img src="./assets/images/mission-statement/banner-img.png" alt="Boat Storage"
+                                class="img-fluid w-100">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
+        <!-- Our Mission Statement Section End -->
+
+
+
+        <!-- Our Vision Section Start -->
+        <section class="about-section our-visionsec my-lg-5 my-3">
+            <div class="container px-0">
+                <div class="row no-gutters">
+                    <div class="col-lg-6 ">
+                        <div class="">
+                            <img src="./assets/images/mission-statement/vision.png" alt="Boat Storage"
+                                class="img-fluid w-100">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="about-content-wrapper">
+                            <div class="about-content left-centsec">
+                                <h3 class="about-title mb-4">Our Vision</h3>
+                                <p class="about-text mb-lg-4 mb-3">Not to be the biggest, but to be the best boat
+                                    dealership in North America.</p>
+                                <a href="/contact" id="vision-btn" class="btn-outline-global d-inline-flex">Contact
+                                    Us</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Our Vision Section End -->
+
+        <!-- Our Values Section Start -->
+        <section class="about-section my-lg-5 my-3">
+            <div class="container-fluid px-0">
+                <div class="row no-gutters align-items-center">
+                    <div class="col-lg-6 ">
+                        <div class="about-img-wrapper">
+                            <img src="./assets/images/mission-statement/values.png" alt="Boat Storage"
+                                class="img-fluid w-100">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="about-content-wrapper p-lg-5 p-4">
+                            <div class="about-content left-centsec">
+                                <h3 class="about-title mb-4">Our Values</h3>
+                                <p class="about-text mb-lg-4 mb-3">At Starboard Choice Marine we believe that honesty is
+                                    always the best policy and that trust has to be earned. We are committed to the
+                                    highest standards of integrity in all that we do. Our employees are the key to our
+                                    success. We value their talent, knowledge and dedication. We treat all employees
+                                    with respect and lead by example. We know that our customers are critical to our
+                                    success. We are driven to exceed their expectations. We live the lifestyle, as we
+                                    are boaters ourselves, we believe in maintaining a healthy work / family balance.
+                                </p>
+                                <a href="/contact" id="values-btn" class="btn-outline-global d-inline-flex">Contact
+                                    Us</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Our Values Section End -->
+
     </main>
 
     <!-- Footer Section Start -->
